# tedium

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  styles-40410ddecbe004fc.css  styles-439298df551bb3dc.css  tedium-101a8796cfd5287f.js  tedium-129d865be928a3a1.js  tedium-150fec28b4120704.js  tedium-16a8868320165224.js  tedium-2ac5712c168142a6.js  tedium-36a3646a23911edf.js  tedium-3f4687049133baf2.js  tedium-40b4653de58242f9.js  tedium-70a6a85303be752b.js  tedium-84dde0dca2b18e38.js  tedium-91a6f2b6ebcc6cc8.js  tedium-9edd612d806644c1.js  tedium-a0818e6ae8033aaa.js  tedium-a4add0c20254f251.js  tedium-a6d6f1b348f83af.js  tedium-ab207249290351c.js  tedium-acab8a1e1febe07a.js  tedium-b53502258375c6cb.js  tedium-b735f4a9544f29ee.js  tedium-b78715f07bee71ca.js  tedium-b8b8961aebd6314c.js  tedium-b9f0ddc1ab0267da.js  tedium-ccda16d1edb64eec.js  tedium-d8ca615aac6596c0.js  tedium-ddf0d6f29f4eab09.js  tedium-f239d80cc8cf19a1.js  tedium-fbb1bf9e741a6477.js
.github/workflows/: c_deployment.yml  ci.yml
assets/: basic_map.ldtk  styles.css  tedium_lvl2.ldtk
assets/maps/: basic_map.ldtk
src/: animate_player.rs  components.rs  debug.rs  events.rs  field_of_view.rs  field_of_view_2.rs  main.rs  player_animation.rs  systems.rs  utils.rs  visibility.rs
src/systems/: animate_player.rs  arrow_keys.rs  camera_follow.rs  cycle_poi.rs  debug_values.rs  keyboard_events.rs  mod.rs  mouse_click.rs  pathfinding.rs  play_speed.rs  player_move.rs  setup.rs  spawn_camera.rs  spawn_map.rs  toggle_wall.rs  visibility.rs
