[package]
name = "Tedium"
version = "0.1.0"
authors = ["Tauseefk <tauseef25@gmail.com>", "RichoDemus <git@richodemus.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.8" }
bevy_ecs_ldtk = "0.4"
pathfinding = "4.2.1"
animation_transition = { path = "../animation_transition/animation_transition", features = ["derive"] }
