[package]
name = "tedium"
version = "0.1.0"
authors = ["Tauseefk <tauseef25@gmail.com>", "RichoDemus <git@richodemus.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.8" }
bevy_ecs_ldtk = "0.4"
pathfinding = "4.2.1"
animation_transition = { git = "https://github.com/tauseefk/animation_transition", features = ["derive"] }

# bevy_ecs_ldtk is using bevy_ecs_tilemap
# bevy_ecs_tilemap has to be run with a feature flag when building to wasm, as they explain here <https://github.com/StarArawn/bevy_ecs_tilemap#running-examples-on-web>
# As expained in the cargo book <https://doc.rust-lang.org/cargo/reference/features.html#feature-unification>, when you define here THE SAME VERSION of the dependency with the required feature, it is automatically accessible also to your other dependencies and solves the issue that bevy_ecs_ldtk doesn't provide a way to activate this through their features.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ecs_tilemap = { version = "0.7", features = ["atlas"] }
